working on dashboard

--- a/src/index.css
+++ b/src/index.css
@@ -7,20 +7,26 @@
 :root {
   --background: #ffffff;
   --text-color: #252526;
-  --caramel: #D69A00;
-  --tiger:#FF6647;
-  --card: #F6F7FB;
+  --caramel: #d69a00;
+  --tiger: #ff6647;
+  --card: #f6f7fb;
+  --accent: #3a3a3a;
+  --sideBar: #f6f7fb;
+  --sideBarIcon: #ffffff;
+  --scrollBg: rgba(0, 0, 0, 0.3);
 }
 
 [data-theme="dark"] {
-  --background: #252526;
+  --background: #000000;
   --text-color: #ffffff;
-  --caramel: #D69A00;
-  --tiger:#FF6647;
-  --card: #28282B;
+  --caramel: #d69a00;
+  --tiger: #ff6647;
+  --card: #28282b;
+  --accent: rgba(247, 249, 252, 0.7);
+  --sideBar: #121212;
+  --sideBarIcon: #28282b;
+  --scrollBg: #808080;
 }
-
-
 
 html {
   scroll-behavior: smooth;
@@ -29,6 +35,7 @@ html {
 
 body {
   font-family: "Manrope", sans-serif;
+  font-size: 17px;
 }
 
 .mode_color {
@@ -38,5 +45,19 @@ body {
 }
 
 .Container {
-  @apply container w-full mx-auto md:px-6 lg:px-6 px-5;
+  @apply container w-full mx-auto md:px-6 lg:px-12 px-5;
+}
+
+.scrollBar::-webkit-scrollbar {
+  width: 10px;
+}
+
+.scrollBar::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px var(--scrollBg);
+  border-radius: 10px;
+}
+
+.scrollBar::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px var(--scrollBg);
 }
