--- a/src/Layout/style/style.css
+++ b/src/Layout/style/style.css
@@ -15,3 +15,7 @@
     @apply mt-5 cursor-pointer;
 }
 
+/* sub top bar */
+.model_list_item {
+  @apply flex items-center gap-1 cursor-pointer hover:text-caramel;
+}
