--- a/src/index.css
+++ b/src/index.css
@@ -83,3 +83,16 @@ body {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px var(--scrollBg);
 }
+
+
+/*=== General modal style ===*/
+.CModal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: var(--card);
+  padding: 15px 25px 25px 25px;
+  border-radius: 10px;
+   width: 90%
+};
