--- a/src/Home/style/style.css
+++ b/src/Home/style/style.css
@@ -37,3 +37,9 @@
   width: 10%;
 }
 
+
+.dashboardLink {
+  @apply rounded-md pb-3 pt-1 px-1 hover:border shadow-sm text-accent hover:shadow-md cursor-pointer transition duration-300 ease-in-out;
+  background: var(--background);
+}
+
