--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,7 @@ body {
 
 /*=== General button ===*/
 .button {
-  @apply border border-caramel px-5 py-2 rounded font-medium bg-caramel text-white transition ease-in-out duration-300 text-base tracking-wider hover:opacity-70;
+  @apply border border-caramel px-3 py-2 rounded font-medium bg-caramel text-white transition ease-in-out duration-300 text-sm tracking-wider hover:opacity-70;
 }
 
 .transparentButton {
