--- a/src/Settings/style/settingsStyle.css
+++ b/src/Settings/style/settingsStyle.css
@@ -1,59 +1,60 @@
 /* to remove the backgroud of list items */
 
-.MuiMenu-paper{
-    background: none !important;
+.MuiMenu-paper {
+  background: none !important;
 }
-.MuiList-root{
-    background: none !important;
-
+.MuiList-root {
+  background: none !important;
 }
 /* to remove the backgroud of list items */
 .employee-profile-table {
-    @apply w-full text-center text-accent;
+  @apply w-full text-center text-accent;
 }
 
-.employee-profile-table tr{
+.employee-profile-table tr {
   background: var(--card);
   border-bottom: 5px solid var(--background);
 }
 
 .employee-profile-table td {
-    @apply text-sm;
+  @apply text-sm;
 }
 
-.employee-profile-table th, .employee-profile-table td {
-    padding: 10px;
+.employee-profile-table th,
+.employee-profile-table td {
+  padding: 10px;
 }
-
 
 /* Inputs with white background */
 .whiteBg_form label {
-    @apply block text-sm font-medium pb-1 text-accent;
-  }
-  .whiteBg_form input,
-  .whiteBg_form select {
-    @apply w-full rounded p-2 focus:outline-none text-sm;
-    background: var(--background);
-  }
+  @apply block text-sm font-medium pb-1 text-accent;
+}
+.whiteBg_form input,
+.whiteBg_form select {
+  @apply w-full rounded p-2 focus:outline-none text-sm;
+  background: var(--background);
+}
 
-  .whiteBg_form select {
-      @apply text-slate-400;
-  }
+.whiteBg_form select {
+  @apply text-slate-400;
+}
 
-  .whiteBg_form textarea {
-    background: var(--background);
-  }
+.whiteBg_form textarea {
+  background: var(--background);
+}
 
-  /*=== Personal information page form  ===*/
-  .P_Form_Group {
-    @apply flex gap-2 items-center;
-  }
+/*=== Personal information page form  ===*/
+.P_Form_Group {
+  @apply flex gap-2 lg:items-center flex-col lg:flex-row;
+}
 
-  .P_Form_Group input, .P_Form_Group textarea, .P_Form_Group select {
-    @apply flex-1 rounded p-2 focus:outline-none text-sm placeholder:text-sm;
-    background: var(--background);
-  }
+.P_Form_Group input,
+.P_Form_Group textarea,
+.P_Form_Group select {
+  @apply flex-1 rounded p-2 focus:outline-none text-sm placeholder:text-xs;
+  background: var(--background);
+}
 
-  .P_Form_Group label {
-    @apply text-xs lg:text-sm font-medium text-accent;
-  }
+.P_Form_Group label {
+  @apply text-xs font-medium text-accent;
+}
