--- a/src/Settings/style/settingsStyle.css
+++ b/src/Settings/style/settingsStyle.css
@@ -25,6 +25,15 @@
   padding: 10px;
 }
 
+/*== employee details table ==*/
+.employee_info_table {
+  @apply border border-collapse w-full text-accent;
+}
+
+.employee_info_table th {
+  @apply border;
+}
+
 /* Inputs with white background */
 .whiteBg_form label {
   @apply block text-sm font-medium pb-1 text-accent;
@@ -53,6 +62,10 @@
 .P_Form_Group select {
   @apply flex-1 rounded p-2 focus:outline-none text-sm placeholder:text-xs;
   background: var(--background);
+}
+
+.P_Form_Group select {
+  @apply text-xs text-accent;
 }
 
 .P_Form_Group label {
