--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,15 @@ body {
   padding: 6px 8.5px;
 }
 
+.button:disabled,
+.button:disabled:hover,
+.button:disabled:active {
+  background-color: #ccc;
+  color: #292929;
+  border-color: #ccc;
+  cursor: not-allowed;
+}
+
 /*=== General scroll bar ===*/
 .scrollBar::-webkit-scrollbar {
   width: 8px;
