--- a/src/Layout/style/style.css
+++ b/src/Layout/style/style.css
@@ -23,3 +23,12 @@
 .module_list_item_mobile {
   @apply flex items-center gap-3 cursor-pointer text-base;
 }
+
+.switchCompany {
+  @apply rounded pl-2 pr-10 py-2 focus:outline-none text-sm font-medium cursor-pointer bg-mainBg mr-5;
+}
+
+.switchCompany option {
+  @apply text-accent font-medium cursor-pointer;
+}
+
