--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --background: #ffffff;
   --text-color: #252526;
   --caramel: #ff6647;
+  --faded: rgb(255, 102, 71, .5);
   --card: #f6f7fb;
   --accent: #3a3a3a;
   --sideBar: #f6f7fb;
@@ -39,6 +40,22 @@
 
 [color-theme="purple"] {
   --caramel: #6e55ff;
+}
+
+[color-theme="orange"] {
+  --faded: rgb(255, 102, 71, .5);
+}
+
+[color-theme="green"] {
+  --faded: rgb(1,150,107, .5);
+}
+
+[color-theme="blue"] {
+  --faded: rgb(52,156,228, .5);
+}
+
+[color-theme="purple"] {
+  --faded: rgb(110,85,255, .5);
 }
 
 html {
@@ -119,3 +136,5 @@ body {
 .custom-dropdown:hover .dropdown-menu {
   display: block;
 }
+
+
