--- a/src/Settings/style/settingsStyle.css
+++ b/src/Settings/style/settingsStyle.css
@@ -151,6 +151,20 @@
 }
 
 /*error message  */
-.input-container span{
+.input-container span, .showErrorMsg{
   @apply text-xs text-red-600 pl-1; 
+}
+
+
+/*== Company information form  ===*/
+.Company_Information_form .input-container{
+  @apply mb-4 w-full;
+}
+
+.Company_Information_form .input-container label {
+  @apply text-sm mb-2 block;
+}
+
+.Company_Information_form .input-container input, .Company_Information_form .input-container select {
+  @apply w-full bg-transparent rounded-md py-3 px-3 border border-gray-300 focus:outline-none bg-mainBg;
 }
