--- a/src/Settings/style/settingsStyle.css
+++ b/src/Settings/style/settingsStyle.css
@@ -135,29 +135,30 @@
 /*== medical history table ==*/
 .medicalTableWrap {
   @apply pb-6 px-5 pt-3 text-black;
-  background: #FFEDED;
+  background: #ffeded;
 }
 
 .medicalTableWrap table {
   @apply w-full text-sm text-left;
 }
 
-.medicalTableWrap table th{
+.medicalTableWrap table th {
   @apply pb-5;
 }
 
-.medicalTableWrap table td{
+.medicalTableWrap table td {
   @apply pb-2;
 }
 
 /*error message  */
-.input-container span, .showErrorMsg, .whiteBg_form span{
-  @apply text-xs text-red-600 pl-1; 
+.input-container span,
+.showErrorMsg,
+.whiteBg_form span {
+  @apply text-xs text-red-600 pl-1;
 }
 
-
 /*== Company information form  ===*/
-.Company_Information_form .input-container{
+.Company_Information_form .input-container {
   @apply mb-4 w-full;
 }
 
@@ -165,15 +166,20 @@
   @apply text-sm mb-2 block;
 }
 
-.Company_Information_form .input-container input, .Company_Information_form .input-container select {
+.Company_Information_form .input-container input,
+.Company_Information_form .input-container select {
   @apply w-full bg-transparent rounded-md py-3 px-3 border border-gray-300 focus:outline-none bg-mainBg;
 }
 
 /* Add department form */
-.add-department-form .input-container input, .add-department-form .input-container select {
-  @apply w-full bg-transparent rounded-md p-2 border border-gray-400 focus:outline-none
+.add-department-form .input-container input,
+.add-department-form .input-container select,
+.add-designation-form input,
+.add-designation-form select {
+  @apply w-full bg-transparent rounded-md p-2 border border-gray-400 focus:outline-none;
 }
 
-.add-department-form .input-container label {
- @apply text-sm mb-2 block;
+.add-department-form .input-container label,
+.add-designation-form label {
+  @apply text-sm mb-2 block;
 }
