--- a/src/Settings/style/settingsStyle.css
+++ b/src/Settings/style/settingsStyle.css
@@ -153,7 +153,9 @@
 /*error message  */
 .input-container span,
 .showErrorMsg,
-.whiteBg_form span {
+.whiteBg_form span,
+.showErrorMsg span
+ {
   @apply text-xs text-red-600 pl-1;
 }
 
