--- a/src/Settings/style/settingsStyle.css
+++ b/src/Settings/style/settingsStyle.css
@@ -168,7 +168,7 @@
   @apply text-sm mb-2 block;
 }
 
-.Company_Information_form .input-container input,
+.Company_Information_form .input-container input, .input-container select, .input-container input, .input-container textarea,
 .Company_Information_form .input-container select {
   @apply w-full bg-transparent rounded-md py-3 px-3 border border-gray-300 focus:outline-none bg-mainBg;
 }
