--- a/src/Settings/style/settingsStyle.css
+++ b/src/Settings/style/settingsStyle.css
@@ -156,7 +156,8 @@
 .whiteBg_form span,
 .showErrorMsg span
  {
-  @apply text-xs text-red-600 pl-1;
+  @apply text-xs text-red-600 pl-1 block;
+
 }
 
 /*== Company information form  ===*/
