--- a/src/Payroll/Style/style.css
+++ b/src/Payroll/Style/style.css
@@ -1,15 +1,15 @@
-.payroll-review-table {
+.payroll-table {
     @apply w-full table-auto text-center;
 }
 
-.payroll-review-table tr {
+.payroll-table tr {
     @apply bg-card border-b-2 border-white text-sm;
 }
 
-.payroll-review-table th {
+.payroll-table th {
     @apply p-3
 }
 
-.payroll-review-table td {
-    @apply p-2
+.payroll-table td {
+    @apply p-3
 }
