--- a/src/Payroll/Style/style.css
+++ b/src/Payroll/Style/style.css
@@ -1,15 +1,26 @@
 .payroll-table {
-    @apply w-full table-auto text-center;
+  @apply w-full table-auto text-center;
 }
 
 .payroll-table tr {
-    @apply bg-card border-b-2 border-white text-sm;
+  @apply bg-card border-b-2 border-white text-sm;
 }
 
 .payroll-table th {
-    @apply p-3
+  @apply p-3;
 }
 
 .payroll-table td {
-    @apply p-3
+  @apply p-3;
+}
+
+/*== view payroll breakdown table ==*/
+
+.payroll-table.view th,
+.payroll-table.view td {
+  @apply border-2;
+}
+
+.payroll-table.view td {
+  @apply bg-mainBg;
 }
