--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,7 @@ body {
   background-color: var(--background);
   color: var(--text-color);
   transition: all 0.5s;
+  /* @apply h-screen overflow-auto; */
 }
 
 .Container {
