--- a/src/index.css
+++ b/src/index.css
@@ -115,7 +115,7 @@ body {
 }
 
 .transparentButton {
-  @apply border border-slate-400 hover:border-slate-800 rounded font-medium bg-transparent text-accent transition ease-in-out duration-500 text-sm tracking-wider;
+  @apply border border-slate-400 hover:border-slate-800 rounded font-medium bg-transparent transition ease-in-out duration-500 text-sm tracking-wider;
   padding: 6px 8.5px;
 }
 
