--- a/src/Auth/Style/style.css
+++ b/src/Auth/Style/style.css
@@ -1,3 +1,15 @@
+:root {
+  --authPrimary: #ff6647;
+  /* --authPrimary: #01966b; */
+}
+
+.authBtn {
+  @apply border rounded font-medium text-white transition ease-in-out duration-300 text-sm tracking-wider hover:opacity-70;
+  padding: 7px 8.5px;
+  background: var(--authPrimary);
+  border-color: (var(--authPrimary));
+}
+
 .formWrap {
   position: absolute;
   top: 50%;
