--- a/src/Auth/Style/style.css
+++ b/src/Auth/Style/style.css
@@ -26,6 +26,11 @@
   height: 80vh;
 }
 
+.authSelectTag.ant-select:not(.ant-select-customize-input)
+  .ant-select-selector {
+  @apply rounded border-slate-400;
+}
+
 @media (max-width: 768px) {
   .authIntro {
     height: 65vh;
