--- a/src/index.css
+++ b/src/index.css
@@ -338,3 +338,11 @@ input[type="text"].ant-input,
 .ant-popover-title {
   background: var(--caramel);
 }
+
+/* Select */
+.SelectTag.ant-select:not(.ant-select-customize-input) .ant-select-selector {
+  border-radius: 3px;
+  /* padding: 10px 0 20 0; */
+  /* margin: 4px 0; */
+}
+
