--- a/src/index.css
+++ b/src/index.css
@@ -342,7 +342,12 @@ input[type="text"].ant-input,
 /* Select */
 .SelectTag.ant-select:not(.ant-select-customize-input) .ant-select-selector {
   border-radius: 3px;
-  /* padding: 10px 0 20 0; */
-  /* margin: 4px 0; */
 }
 
+/* General input style */
+.generalInputStyle {
+  padding: 7.3px 6px;
+  width: 100%;
+  border-radius: 3px;
+  background: var(--background);
+}
