--- a/src/index.css
+++ b/src/index.css
@@ -273,9 +273,9 @@ input[type="text"].ant-input,
   padding: 0 !important;
 } */
 
-.ant-drawer-close {
+/* .ant-drawer-close {
   display: none;
-}
+} */
 
 /* ant card */
 .ant-card-head,
@@ -353,5 +353,5 @@ input[type="text"].ant-input,
 }
 
 .drawerBg .ant-drawer-wrapper-body {
- background: var(--card);
+  background: var(--card);
 }
