--- a/src/index.css
+++ b/src/index.css
@@ -356,3 +356,9 @@ textarea.ant-input,
 }
 
 /* Stepper */
+.ant-steps-item-process > .ant-steps-item-container > .ant-steps-item-icon {
+  background: var(--caramel);
+}
+.ant-steps-item-process .ant-steps-item-icon {
+  border-color: var(--caramel);
+}
