--- a/src/index.css
+++ b/src/index.css
@@ -362,3 +362,21 @@ textarea.ant-input,
 .ant-steps-item-process .ant-steps-item-icon {
   border-color: var(--caramel);
 }
+.ant-steps-item-finish .ant-steps-item-icon {
+  border-color: var(--caramel);
+}
+.ant-steps-item-finish
+  > .ant-steps-item-container
+  > .ant-steps-item-tail:after {
+  border-color: var(--caramel);
+}
+
+.ant-steps-item-finish
+  > .ant-steps-item-container
+  > .ant-steps-item-tail:after {
+  background-color: var(--caramel);
+}
+
+.ant-steps-item-finish .ant-steps-item-icon > .ant-steps-icon {
+  color: var(--caramel);
+}
