added custom style to antd steps dot

--- a/src/index.css
+++ b/src/index.css
@@ -386,3 +386,11 @@ textarea.ant-input,
   .ant-steps-item-title {
   width: 100%;
 }
+
+/* steps progress dot */
+.ant-steps-item-process
+  .ant-steps-item-icon
+  > .ant-steps-icon
+  .ant-steps-icon-dot {
+  background: var(--caramel);
+}
