--- a/src/index.css
+++ b/src/index.css
@@ -401,3 +401,12 @@ textarea.ant-input,
   .ant-steps-icon-dot {
   background: var(--caramel);
 }
+
+/* legibility for disabled inputs */
+
+.ant-input[disabled],
+.ant-select-disabled.ant-select:not(.ant-select-customize-input)
+  .ant-select-selector,
+.ant-radio-button-wrapper-disabled.ant-radio-button-wrapper-checked {
+  color: rgba(18, 18, 18, 0.838);
+}
