--- a/src/index.css
+++ b/src/index.css
@@ -260,6 +260,32 @@ textarea.ant-input,
   background: var(--background) !important;
 }
 
+/* enable disabled date inputs to be grayed out as intended */
+.ant-picker.ant-picker-disabled {
+  background: #f5f5f5 !important;
+  border-color: #d9d9d9 !important;
+  cursor: not-allowed;
+}
+.ant-picker-input > input[disabled] {
+  color: rgba(18, 18, 18, 0.838) !important;
+  background-color: #f5f5f5 !important;
+  border-color: #d9d9d9 !important;
+  box-shadow: none;
+  cursor: not-allowed;
+  opacity: 1;
+}
+
+.ant-input[disabled] {
+  color: rgba(0, 0, 0, 0.25);
+  background-color: #f5f5f5 !important;
+  border-color: #d9d9d9 !important;
+  box-shadow: none;
+  cursor: not-allowed;
+  opacity: 1;
+}
+
+/* enable disabled date inputs to be grayed out  ___ end */
+
 .ant-select-arrow {
   color: var(--accent) !important;
 }
@@ -403,8 +429,8 @@ textarea.ant-input,
 }
 
 /* legibility for disabled inputs */
-
 .ant-input[disabled],
+.ant-input-number-disabled,
 .ant-select-disabled.ant-select:not(.ant-select-customize-input)
   .ant-select-selector,
 .ant-radio-button-wrapper-disabled.ant-radio-button-wrapper-checked {
