--- a/src/features/timeAndAttendance/assets/style.css
+++ b/src/features/timeAndAttendance/assets/style.css
@@ -1,3 +1,7 @@
 input[type="radio"]:checked + span {
     display: block;
   }
+
+  .shiftBox {
+    @apply border py-3 px-7 text-accent font-medium text-base;
+  }
