--- a/src/index.css
+++ b/src/index.css
@@ -406,6 +406,10 @@ textarea.ant-input,
   color: var(--caramel);
 }
 
+.ant-steps-item-content>.ant-steps-item-description {
+  width: max-content;
+}
+
 /* customization to allow userfeedbackComp to have side icon*/
 .ant-steps-vertical.ant-steps-small
   .ant-steps-item-container
@@ -427,6 +431,7 @@ textarea.ant-input,
   .ant-steps-icon-dot {
   background: var(--caramel);
 }
+
 
 /* legibility for disabled inputs */
 .ant-input[disabled],
