--- a/src/features/recruitment/style/addJobOpening.css
+++ b/src/features/recruitment/style/addJobOpening.css
@@ -7,16 +7,23 @@
   margin-bottom: auto;
 }
 .ant-steps .ant-steps-item-finish .ant-steps-item-icon {
-    background: var(--caramel);
+  background: var(--caramel);
 }
-.ant-steps .ant-steps-item-finish .ant-steps-item-icon > .ant-steps-icon{
-color: var(--background);
+.ant-steps .ant-steps-item-finish .ant-steps-item-icon > .ant-steps-icon {
+  color: var(--background);
 }
-.ant-steps .ant-steps-item-process > .ant-steps-item-container > .ant-steps-item-icon {
-    background: var(--background);
+.ant-steps
+  .ant-steps-item-process
+  > .ant-steps-item-container
+  > .ant-steps-item-icon {
+  background: var(--background);
 }
-.ant-steps .ant-steps-item-process > .ant-steps-item-container > .ant-steps-item-icon > .ant-steps-icon{
-color: var(--caramel);
+.ant-steps
+  .ant-steps-item-process
+  > .ant-steps-item-container
+  > .ant-steps-item-icon
+  > .ant-steps-icon {
+  color: var(--caramel);
 }
 
 .ant-steps .ant-steps-item-container .ant-steps-item-tail {
@@ -60,7 +67,7 @@ color: var(--caramel);
   height: 2.63rem;
 }
 
-/* Form styling */
+/* FORM */
 .ant-form-vertical .ant-form-item-label > label,
 .ant-form-item-control-input-content .ant-checkbox-wrapper {
   font-size: 18px;
@@ -99,7 +106,7 @@ color: var(--caramel);
   .ant-select:not(.ant-select-customize-input)
   .ant-select-selector:hover,
 .ant-form-item-control-input-content .ant-input:hover {
-    border-color: var(--caramel);
+  border-color: var(--caramel);
 }
 .ant-form > div:not(#buttons) {
   display: flex;
@@ -107,7 +114,7 @@ color: var(--caramel);
   justify-content: space-between;
   align-items: center;
   padding: 22px 20px;
-  background-color: var(--greyBg);
+  background-color: var(--card);
 }
 .ant-form div .ant-form-item:not(#buttons .ant-form-item) {
   margin: auto 0;
@@ -120,6 +127,10 @@ color: var(--caramel);
 .ant-form #job-Description .ant-form-item .ant-form-item-control {
   margin-top: 24px;
 }
+.ant-form-item-control-input .ant-form-item-control-input-content .ant-btn-text:hover {
+  color: var(--caramel) !important;
+  text-decoration: underline;
+}
 .ant-form-item-control-input-content .ant-btn-text {
   font-size: 24px;
   font-weight: 400;
@@ -129,4 +140,87 @@ color: var(--caramel);
   border-radius: 4px;
   border-color: var(--caramel);
   height: 40px;
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 1023px) {
+  /* stepper */
+  .ant-steps .ant-steps-item-content > .ant-steps-item-description {
+    font-size: 15px;
+  }
+
+  /* form */
+  .ant-form-vertical .ant-form-item-label > label,
+  .ant-form-item-control-input-content .ant-checkbox-wrapper {
+    font-size: 16px;
+  }
+
+  .ant-form-item-control-input-content .ant-input,
+  .ant-form-item-control-input-content .ant-select,
+  .ant-form-item-control-input-content textarea {
+    font-size: 14px;
+  }
+  .ant-form-item-control-input-content
+    .ant-select-single.ant-select-show-arrow
+    .ant-select-selection-item,
+  .ant-form-item-control-input-content
+    .ant-select-single.ant-select-show-arrow
+    .ant-select-selection-placeholder,
+  .ant-form-item-control-input .ant-form-item-control-input-content input {
+    padding-left: 10px;
+  }
+
+  .ant-form-item-control-input-content .ant-btn-text {
+    font-size: 20px;
+  }
+  .ant-form-item-control-input-content .ant-btn-primary {
+    font-size: 12px;
+    height: 32px;
+  }
+  .ant-form #job-Description .ant-form-item .ant-form-item-control {
+  margin-top: 22px;
+}
+}
+
+@media (max-width: 699px) {
+
+
+  /* form */
+  .ant-form > div:not(#buttons) {
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
+  padding: 20px 15px;
+}
+.ant-form div .ant-form-item:not(#buttons .ant-form-item) {
+  width: 100%;
+  background-color: var(--card);
+}
+ .ant-form-item-control-input-content .ant-btn-text {
+    font-size: 18px;
+  }
+  .ant-form #job-Description .ant-form-item .ant-form-item-control {
+  margin-top: 19px;
+}
+}
+
+@media (max-width:574px) {
+/* stepper */
+  .Container .add-job-opening{
+    height: fit-content;
+  }
+  .add-job-opening .ant-steps {
+    gap: 0.5rem;
+    margin: auto;
+  }
+
+  /* Form */
+  #add-job-opening .ant-steps .ant-steps-item .ant-steps-item-container .ant-steps-item-content{
+    margin-top: 0;
+    position: relative;
+    padding-left: 15px;
+    flex-direction: column;
+    display: flex;
+  }
+  
 }
